﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-21 Michal Čihař  <michal@cihar.com>
    * libraries/import/sql.php: Fix query splitting in some cases (reported by
      Marc).
    * libraries/common.lib.php, lang/*: Translate message that has been
      ignored for 2.7.0 release.
    * libraries/common.lib.php: Make code more redable, default to MySQL 5.0
      documentation as it is latest stable version.
    * main.php, libraries/select_server.lib.php,
      libraries/auth/cookie.auth.lib.php: Escape verbose server name (bug
      #1362671).
    * index.php: Avoid XSS on HTTP_HOST.

2005-11-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.7.0-rc1 released
    * many files: $dbh becomes $controllink for better contrast with $userlink

2005-11-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php::PMA_showMySQLDocu()
      - undefined constant (if server connection fails)
    * libraries/select_theme.lib.php
      - undefined variable (if server connection fails)

2005-11-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: initialize in case there are
      no databases (MySQL < 5.0)

2005-11-18 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * server_databases.php:
      - require_once common.lib.php BEFORE ANYTHING else
      - unified style, removed tables
      - removed superuser check for dbstats
    * css/phpmyadmin.css.php:
      - small improvements
    * themes/darkblue_orange/css/*
      - fixed font sizes
    * lang/english-*: small improvements
    * tbl_properties_structure.php
      - do not truncate rowcount and next autoindex
    * /*
      - common.lib.php should REALLY REALLY and ALWAYS be the first include
      - no other calls to grab_gloabls.lib.php
    * fixed minimum_common for css files
    * header.inc.php: missing ; after &quot
    * libraries/function.js::pdfPaperSize()