@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-11-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * added test/theme.php: for testing themes
+
 2005-11-21 Michal Čihař  <michal@cihar.com>
     * libraries/import/sql.php: Fix query splitting in some cases (reported by
       Marc).
